# AnonBot-OpenSpace-wbans

./: .env.example  README.md  docker-compose.yml  pyproject.toml
db/: bans.db
src/: __init__.py  __main__.py  config_reader.py  throttling.py
src/handlers/: __init__.py  ban.py  bot_messages.py  start.py
